# pega-datascientist-tools

./: .Rhistory  .clinerules  .gitignore  .pre-commit-config.yaml  .travis.yml  .travis.yml.old  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLINE_TEST.md  CONTRIBUTING.md  DECISION_ANALYZER_ARCHITECTURE.md  Dockerfile  GettingStarted.html  GettingStartedWithDecisionAnalyzer.html  HealthCheckExport.xlsx  MANIFEST.in  README.md  SECURITY.md  _config.yml  anonymised.parquet  generate_customer_healthchecks.py  genindex.html  index.html  logging.html  py-modindex.html  pyproject.toml  pyrightconfig.json  reference.html  script.js  search.html  setup.py  test_consolidation.py  testing.py  verify_sampling.py  versions.json
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: Python linter.yml  copilot-instructions.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bug_report_python.yml  bug_report_r.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/scripts/: excel_to_csv.py
.github/workflows/: DJS report tests.yml  Docs check.yml  Docs deploy.yml  Generate & Publish Docs.yml  Generate docs.yml  Healthcheck tests.yml  Python release.yml  Python tests floor.yml  Python tests.yml  Quarto report tests.yml  R docs.yml  R tests.yml  auto-tag-on-merge.yml  cdhtools.yml  create-release.yml  dependabot-automerge.yml  excel_to_csv.yml  mend-scan.yml  pdstools.yml  ruff.yml
4.7.1/: .buildinfo  GettingStarted.html  GettingStartedWithDecisionAnalyzer.html  GettingStartedWithTheStandAloneApplication.html  cli.html  genindex.html  index.html  logging.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
4.7.1/_sources/: reference.rst.txt
4.7.1/articles/: ADMBinningInsights.html  ADMBinningInsights.ipynb  ADMExplained.html  ADMExplained.ipynb  AGBModelVisualisation.html  AGBModelVisualisation.ipynb  Example_ADM_Analysis.html  Example_ADM_Analysis.ipynb  Example_IH_Analysis.html  Example_IH_Analysis.ipynb  Predictions.html  Predictions.ipynb  agb_global_explanations.html  agb_global_explanations.ipynb  explainability_extract.html  explainability_extract.ipynb  hds_analysis.html  hds_analysis.ipynb  thompsonsampling.html  thompsonsampling.ipynb  vf_analysis.html  vf_analysis.ipynb
4.7.1/autoapi/: index.html
5.0.0rc1/: .buildinfo  GettingStarted.html  GettingStartedWithDecisionAnalyzer.html  GettingStartedWithTheStandAloneApplication.html  cli.html  genindex.html  index.html  logging.html  py-modindex.html  reference.html  search.html  searchindex.js
5.0.0rc1/_sources/: GettingStarted.rst.txt  GettingStartedWithDecisionAnalyzer.rst.txt  GettingStartedWithTheStandAloneApplication.rst.txt
5.0.0rc1/_static/: documentation_options.js
5.0.0rc1/articles/: ADMBinningInsights.html  ADMBinningInsights.ipynb  ADMExplained.html  ADMExplained.ipynb  AGBExplained.html  AGBExplained.ipynb  Example_ADM_Analysis.html  Example_ADM_Analysis.ipynb  Example_IH_Analysis.html  Example_IH_Analysis.ipynb  Predictions.html  Predictions.ipynb  agb_global_explanations.html  agb_global_explanations.ipynb  explainability_extract.html  explainability_extract.ipynb  hds_analysis.html  hds_analysis.ipynb  thompsonsampling.html  thompsonsampling.ipynb  vf_analysis.html  vf_analysis.ipynb
5.0.0rc1/autoapi/: index.html
5.0.0rc2/: .buildinfo  GettingStarted.html  GettingStartedWithDecisionAnalyzer.html  GettingStartedWithTheStandAloneApplication.html  cli.html  genindex.html  index.html  logging.html  py-modindex.html  reference.html  search.html  searchindex.js
5.0.0rc2/_sources/: cli.rst.txt
5.0.0rc2/articles/: ADMBinningInsights.html  ADMBinningInsights.ipynb  ADMExplained.html  ADMExplained.ipynb  AGBExplained.html  AGBExplained.ipynb  Example_ADM_Analysis.html  Example_ADM_Analysis.ipynb  Example_IH_Analysis.html  Example_IH_Analysis.ipynb  (+12 more)
Python/: Articles.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorial_notebooks.html
R/: LICENSE-text.html  authors.html  pkgdown.yml
articles/: ADMBinningInsights.html  Example_ADM_Analysis.html  Predictions.html  decision_analyzer.html  vf_analysis.html
autoapi/: index.html
data/: Churn_CID.csv  SampleHDS.json  pr_data_dm_admmart_mdl_fact.csv  pr_data_dm_admmart_pred.csv  sample_eev2.parquet  sample_explainability_extract.parquet
dev/: .buildinfo  GettingStarted.html  GettingStartedWithDecisionAnalyzer.html  GettingStartedWithTheStandAloneApplication.html  cli.html  genindex.html  index.html  logging.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/: 404.html  LICENSE-text.html  authors.html  decision-analyzer-architecture.md  impact-analyzer-architecture.md  index.html  logging-refactoring-summary.md  migration-v4-to-v5.md  pkgdown.yml  quarto-reports-audit.md  read_data_consolidation_summary.md  style.css  test-coverage-needed.md
extra/: adaptivemodeloverview.Rmd  createModelOverview.sh  createModelReport.sh  generatePMMLFromADMInternal.R  generatePMMLFromDatamart.R  generatePMMLFromExports.R  generate_unittests_pmml.R  hello_cdhtools.Rmd  hello_cdhtools.ipynb  modelreport.Rmd  offlinereports.R  offlinereports.sh  pr_data_dm_admmart_mdl_fact.csv  pr_data_dm_admmart_pred.csv
images/: aggregate_predictor_performance
latest/: GettingStartedWithTheStandAloneApplication.html  cli.html  index.html
offlinereports/: adaptivemodeloverview.Rmd  createModelOverview.sh  createModelReport.sh  modelreport.Rmd  offlinereports.sh
other/: generatePMMLFromADMInternal.R  generatePMMLFromExports.R
python/: ADMDatamart.py  ADMSnapshot.py  Example_ADM_Analysis.ipynb  Example_Historical_Dataset_Analysis.ipynb  Example_IH_Analysis.ipynb  IHanalysis.py  cdh_utils.py  datasets.py  example.ipynb  model_report.py  plots.py  plots_mpl.py  plots_plotly.py  requirements.txt  snapshot_data.py
r/: .gitignore  DESCRIPTION  NAMESPACE
scripts/: anonymize_agb_sample.py  batch_healthcheck.py  build_ia_excel_fixture.py  check_quality_guards.py  measure_launcher_import.py
(+2493 files in other folders)
