[build-system]
requires      = ["setuptools>=61.0.0", "wheel", "pdstools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python", 'reports']
include = ['pdstools*']
exclude = ['/tests/*', '*.dist-info', '/docs/*']

[tool.setuptools.package-data]
"*" = ['*.qmd', '*/pega-report-overrides.css', 'py.typed', '*.sql', 'GlobalExplanations/**/*', 'resources/*.csv', 'app/assets/*.svg']

[project]
name = "pdstools"
dynamic = ["version"]
description = "Open source tooling that helps Data Scientists to analyze Pega models and conduct impactful analyses."
readme = "README.md"
authors = [ { name = "Stijn Kas", email = "stijn.kas@pega.com" } ]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
keywords = [
    "pega",
    "pegasystems",
    "pdstools",
    "datascientist",
    "tools",
]
requires-python = ">=3.10,<3.15"
# Direct dependencies use bounded constraints (>=floor, <next-major) so that
#   - the `Python tests floor.yml` workflow can prove the floors actually work
#     (uv sync --resolution=lowest-direct), and
#   - dependabot opens a focused PR when a new major drops, instead of silently
#     letting users resolve to an untested major. CI runs at both ends of the
#     range; if both pass, the auto-merge workflow lands the bump.
# Bounds are added to deps that ship breaking majors regularly. Stable single-
# major deps (requests, pyyaml, ipywidgets, etc.) can stay loose.
dependencies = [
    "polars>=1.37,!=1.35.1,<2",
    'typing_extensions',
]

[tool.setuptools.dynamic]
version = {attr="pdstools.__version__"}

[project.optional-dependencies]
adm = [
    "plotly[express]>=6.0,<7",
    'pydot>=4.0,<5',
    'requests',
]
pega_io = ['aioboto3>=15.5,<16', 'polars_hash>=0.5,<1']
api = ['httpx>=0.27,<1', 'pydantic>=2.10,<3', 'anyio>=4.0,<5']
healthcheck = ['pdstools[adm]', 'great_tables>=0.13,<1', 'quarto', 'papermill>=2.6,<3', 'xlsxwriter>=3.0,<4', 'pydot>=4.0,<5', 'ipykernel>=6,<8']
explanations = ["plotly[express]>=6.0,<7", "pyyaml>=6,<7"]
nlp = [
    # sentence-transformers depends on torch; depend on the [torch] extra
    # explicitly so onnxscript and the pinned torch range come along.
    'pdstools[torch]',
    'numpy',
    'scikit-learn',
    "sentence-transformers; python_version < '3.14'",
    "umap-learn; python_version < '3.14'",
    "plotly[express]>=6.0,<7",
    "cleanlab[datalab]; python_version < '3.14'",
]
app = [
    'pdstools[healthcheck]',
    'streamlit>=1.45,<2',
    "polars[rt64]>=1.37,!=1.35.1,<2",
    'humanize>=4.0.0,<5',
    'fastexcel>=0.19,<1',
    'questionary>=2.0,<3',
]
onnx = [
    'scikit-learn>=1.6.1',
    'skl2onnx>=1.19.1', # Updated to be compatible with onnx 1.19.0+
    'onnx>=1.18,<1.23', # Using ONNX 1.18.x specifically
    'pdstools[api]',
    # onnxruntime 1.24+ dropped cp310 wheels; keep py3.10 on the 1.23.x line.
    "onnxruntime>=1.22,<1.24; python_version < '3.11'",
    "onnxruntime>=1.22,<1.25; python_version >= '3.11'",
    "scipy>=1.15.3",
]
torch = [
    "torch>=2.12,<3; python_version < '3.14'",
    "onnxscript>=0.7,<1; python_version < '3.14'",
]
# `all` deliberately excludes `torch` and `nlp`: both pull torch (~2.4 GB
# with CUDA wheels) and would bloat the main CI matrix. Users who want
# everything install `pdstools[all,torch,nlp]`. CI runs torch- and nlp-
# requiring tests in the dedicated TorchTests job.
all = ['pdstools[app, pega_io, onnx, explanations]']
dev = ['pre-commit', 'ruff>=0.15.19,<0.16', 'mypy>=1.18,<3', 'pyright>=1.1.411,<2', 'pyrefly>=1.1.1,<2', 'types-PyYAML', 'types-requests']
docs = ['sphinx','furo','sphinx-autoapi','nbsphinx','sphinx-copybutton','sphinx-tabs','myst-parser', 'sphinx-argparse', 'xgboost', 'pydantic', 'httpx', 'streamlit', 'duckdb', 'anyio']
tests = [
    'testbook>=0.4',
    'pytest>=8',
    'pytest-cov>=5',
    'pytest-httpx>=0.30',
    'pytest-mock>=3.10',
    'pytest-xdist>=3.5',
    "pytest-asyncio>=0.25",
    'moto>=5.1',
    'openpyxl>=3',
    'pdstools[all]',
    'coverage>=7',
    'itables>=2',
]

[project.urls]
"Homepage" = "https://github.com/pegasystems/pega-datascientist-tools"
"Bug Tracker" = "https://github.com/pegasystems/pega-datascientist-tools/issues"
"Docs" = "https://pegasystems.github.io/pega-datascientist-tools/"

[project.scripts]
pdstools = 'pdstools.cli:main'

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
    "python-dotenv>=1.2.2",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
extend-select = [
    "UP006",   # deprecated-collection-type (Dict -> dict, List -> list, etc.)
    "UP007",   # non-pep604-annotation (Union[X, Y] -> X | Y)
    "UP012",   # unnecessary-encode-utf8 (.encode("utf-8") -> .encode())
    "UP024",   # os-error-alias (replace bare OSError aliases)
    "UP035",   # deprecated-import (typing.Dict -> dict, etc.)
    "UP045",   # non-pep604-isinstance (Optional[X] -> X | None)
    "B904",    # raise-without-from-inside-except (preserve exception chain)
    "B905",    # zip-without-explicit-strict (require explicit strict= on zip)
    "B006",    # mutable-argument-default
    "B007",    # unused-loop-control-variable
    "B008",    # function-call-in-default-argument
    "B019",    # cached-instance-method (functools.lru_cache on methods)
    "B024",    # abstract-base-class-without-abstract-method
    "B028",    # no-explicit-stacklevel (warnings.warn without stacklevel)
    "RET504",  # unnecessary-assign (return temporary variable)
    "RET505",  # superfluous-else-return
    "RET506",  # superfluous-else-raise
    "SIM108",  # if-else-block-instead-of-if-exp (ternary)
    "TC001",   # typing-only-first-party-import
    "TC002",   # typing-only-third-party-import
    "TC003",   # typing-only-standard-library-import
    "LOG015",  # root-logger-call (use logger = logging.getLogger(__name__))
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
    "RUF005",  # collection-literal-concatenation ([*a, *b] over a + b)
    "RUF012",  # mutable-class-default (require ClassVar)
    "RUF015",  # unnecessary-iterable-allocation-for-first-element
    "RUF022",  # unsorted-dunder-all
    "RUF100",  # unused-noqa
    "D101",    # missing docstring in public class
    "D102",    # missing docstring in public method
    "D103",    # missing docstring in public function
    "D406",    # section-name-ends-in-colon (catches Google-style `Args:` blocks)
    "D407",    # dashed-underline-after-section (catches missing `------` underlines)
    "D410",    # no-blank-line-after-section (numpy section spacing)
    "D411",    # no-blank-line-before-section (numpy section spacing)
]
# These typographic glyphs are intentional in user-facing strings, docstrings
# and test fixtures (e.g. "5 × 10 grid", "ℹ info" headers, en-dashes in ranges).
allowed-confusables = ["×", "ℹ", "–", "‑"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "polars.col",
    "polars.lit",
    "polars.sum",
    "polars.first",
    "polars.last",
    "polars.len",
    "polars.count",
    "pathlib.Path",
]

[tool.ruff.lint.per-file-ignores]
"python/pdstools/app/*" = ["D100", "D101", "D102", "D103", "T20"]
"python/pdstools/ih/*" = ["D100", "D101", "D102", "D103"]
"python/pdstools/infinity/*" = ["D100", "D101", "D102", "D103"]
"python/pdstools/cli.py" = ["T20"]
"python/tests/*" = ["D100", "D101", "D102", "D103", "RUF012"]
"python/docs/*" = ["D100", "D101", "D102", "D103"]
# Notebooks and one-off scripts: relax docstring + style rules outside the library
"examples/**/*.ipynb" = ["D100", "D101", "D102", "D103", "E401", "E402", "E703", "E722", "F401", "F541", "F811", "F821", "B905", "RUF005", "RUF015", "RET505"]
"scripts/*" = ["D100", "D101", "D102", "D103", "T20"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (report generation, integration tests)",
    "ui: UI tests requiring a running Streamlit app and Playwright (deselect with '-m \"not ui\"')",
]

[tool.coverage.run]
source = ["python/pdstools"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "python/pdstools/app/*",  # Streamlit apps (UI code, hard to unit test)
    "python/pdstools/ih/*",   # Infinity Hub (legacy/specialized)
    "**/__init__.py",         # Init files (minimal logic)
]

[tool.coverage.report]
# Minimum coverage required (80%)
fail_under = 80
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pyrefly]
python-version = "3.10.0"
preset = "legacy"
ignore-missing-imports = ["*"]

[tool.pyrefly.errors]
unexpected-keyword = "ignore"
